--- a/paquescolar-web/src/main/webapp/app/con03AvanceContratos.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con03AvanceContratos.xhtml
@@ -23,22 +23,22 @@
 
     <ui:composition template="#{pageContext.servletContext.contextPath}/resources/template/template.xhtml">
         <ui:define name="content">
+            <p:menubar id="mbMenu"> 
+                <p:menuitem value="Nuevo" icon="fa fa-file-o" disabled="true"/>
+                <p:menuitem value="Modificar" icon="fa fa-edit" disabled="true"/>
+                <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
+                <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
+                <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>  
+            </p:menubar>
+
             <div class="ui-g">
                 <div class="ui-g-12">
                     <div class="card">
-                        <p:menubar> 
-                            <p:menuitem value="Nuevo" icon="fa fa-file-o" disabled="true"/>
-                            <p:menuitem value="Modificar" icon="fa fa-edit" disabled="true"/>
-                            <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
-                            <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
-                            <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>  
-                        </p:menubar>
-
-                        <h3>
+                        <h1>
                             <i class="fa fa-filter blue" style="font-size: 16px;"></i>
                             <p:spacer width="10"/>
                             <p:outputLabel value="Filtro de busqueda"/>
-                        </h3>
+                        </h1>
 
                         <p:panelGrid id="pnlFiltro" columns="2" columnClasses="col2_label,col10" 
                                      style="width: 100%; border:0px none; background-color:transparent;"
@@ -53,7 +53,7 @@
                         </p:panelGrid>
                     </div>
                 </div>
-                <div class="card ui-g-12">
+                <div class="card">
                     <h1>
                         <i class="fa fa-list-ol verde" style="font-size: 16px;"></i>
                         <p:spacer width="10"/>
@@ -79,7 +79,7 @@
                         </p:dataTable>
                     </div>
                     <div class="ui-g-12 ui-md-1">
-                        
+
                     </div>
                     <div class="ui-g-12 ui-md-6">
                         <p:dataTable id="tblCantidadProv" value="#{dashboardMB.lstContratosProv}" var="contrato">
