--- a/paquescolar-web/src/main/webapp/app/con05ProvPorDepa.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con05ProvPorDepa.xhtml
@@ -50,7 +50,7 @@
                         <h:outputText value="Datos"/>
                     </h1>
                     <p:dataTable id="lstProveedorConCredito" value="#{creditoBancarioController.lstCreditosProveedor}" 
-                                 var="creditoPro" >
+                                 var="creditoPro" styleClass="ui-datatable-borderless ui-datatable-reflow">
                         <f:facet name="header">
                             <p:spacer width="10" height="8"/>
                             <h:commandLink style="float:right;">
