--- a/paquescolar-web/src/main/webapp/app/con07EstadisticaPagos.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con07EstadisticaPagos.xhtml
@@ -76,7 +76,8 @@
                             <h3>Cuadro Resumen</h3>
                             <p:dataTable value="#{pagoProveedoresController.lstResumenPago}" var="pago" rendered="#{pagoProveedoresController.renderGrafico}"
                                          rowKey="#{pago.formatoRequerimiento}" rowIndexVar="rowId" sortBy="#{pago.codigoDepartamento}"
-                                         rowStyleClass="#{pago.montoSaldo gt 0 ? null : 'filaCompletada'}">
+                                         rowStyleClass="#{pago.montoSaldo gt 0 ? null : 'filaCompletada'}"
+                                         styleClass="ui-datatable-borderless ui-datatable-reflow">
 
                                 <p:columnGroup type="header">
                                     <p:row>
@@ -199,7 +200,8 @@
             <br/><br/>
             <p:dataTable id="tblDatos" value="#{pagoProveedoresController.lstResumenPagoPorProveedor}" var="pro" 
                          rowKey="#{pro.formatoRequerimiento}" rowIndexVar="rowId" sortBy="#{pro.codigoDepartamento}"
-                         scrollable="true" scrollHeight="250" rowStyleClass="#{pro.montoTotalPendiente gt 0 ? null : 'filaCompletada'}">
+                         scrollable="true" scrollHeight="250" rowStyleClass="#{pro.montoTotalPendiente gt 0 ? null : 'filaCompletada'}"
+                         styleClass="ui-datatable-borderless ui-datatable-reflow">
 
                 <f:facet name="header">
                     <p:spacer width="10" height="8"/>
