--- a/paquescolar-web/src/main/webapp/app/reg02Oferta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02Oferta.xhtml
@@ -66,7 +66,7 @@
                                          action="#{ofertaMB.abrirDialogProveedor}" update="tbEmpresas pnoCantidad"/>
                     </h1>
                     <p:dataTable id="tblParticipantes" value="#{ofertaMB.selected.participantesList}" var="participante" 
-                                 emptyMessage="No se han agregado proveedores" rowIndexVar="rowId"  
+                                 emptyMessage="No se han agregado proveedores" rowIndexVar="rowId" styleClass="ui-datatable-borderless ui-datatable-reflow"
                                  rowKey="#{participante.idParticipante}" rowStyleClass="#{participante.estadoEliminacion eq 1 ? 'filaEliminada' : null}">
 
                         <p:column headerText="Id" width="40" styleClass="centrado">
@@ -195,7 +195,7 @@
 
                     <p:tab title="Precios de Referencia">
                         <p:dataTable id="tblDetallePrecio" widgetVar="tblDetallePrecio" value="#{ofertaMB.lstPrecios}" var="precio" 
-                                     emptyMessage="No se han registrado precios a este proveedor">
+                                     emptyMessage="No se han registrado precios a este proveedor" styleClass="ui-datatable-borderless ui-datatable-reflow">
                             <p:column headerText="Item" width="15" id="item" styleClass="centrado">
                                 <p:outputLabel value="#{precio.noItem}" />
                             </p:column>
